--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#bbbbbb</color>
+
+    <color name="balck">#000000</color>
+    <color name="silver">#efefef</color>
+    <color name="silver_deep">#bbbbbb</color>
 </resources>
