--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -1,41 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:background="@drawable/bg_content"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="center_vertical">
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="imageUrl" type="String"/>
+        <variable name="weatherStateName" type="String"/>
+        <variable name="tempWithHumidity" type="String"/>
 
-    <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            tools:src="@drawable/ic_launcher_background"
-            android:layout_marginStart="10dp"/>
+    </data>
 
     <LinearLayout
+            android:background="@drawable/bg_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginStart="5dp">
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="5dp">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                tools:text="Light Cloud"
-                android:gravity="bottom|start"
-                android:layout_weight="1"/>
+        <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
 
-        <TextView
+                tools:src="@drawable/ic_launcher_background"
+                bind:loadUrl="@{imageUrl}"
+                android:layout_gravity="center"/>
+
+        <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                tools:text="-7'C 68%"
-                android:gravity="top|start"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp">
+
+            <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="0dp"
+                    tools:text="Light Cloud"
+                    android:gravity="bottom|start"
+                    android:layout_weight="1"
+                    android:textColor="@color/light_black"
+                    android:textSize="11dp"
+                    android:text="@{weatherStateName}"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    tools:text="-7'C 68%"
+                    android:gravity="top|start"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/light_black"
+                    android:textSize="11dp"
+                    android:text="@{tempWithHumidity}"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</layout>
