--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="vm" type="kr.bsjo.weathersearch.scene.WeatherVm"/>
+        <import type="android.view.View"/>
+        <variable name="vm" type="kr.bsjo.weathersearch.scene.WeatherItemVm"/>
     </data>
 
     <LinearLayout
@@ -13,19 +15,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="@{vm.isHeader ? View.VISIBLE :View.GONE}">
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="55dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_header"
                     android:gravity="center"
                     android:padding="10dp"
-                    android:textColor="@color/balck"
+                    android:textColor="@color/light_black"
+                    android:textSize="11dp"
                     android:text="@string/tab_text_local"/>
-
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/bg_header"
@@ -34,12 +36,11 @@
                     android:textColor="@color/balck"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:paddingStart="23.3dp"
-                    android:paddingEnd="23.3dp"
+                    android:textSize="11dp"
                     android:text="@string/tab_text_today"/>
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/bg_header"
@@ -47,6 +48,7 @@
                     android:textStyle="bold"
                     android:textColor="@color/balck"
                     android:padding="10dp"
+                    android:textSize="11dp"
                     android:text="@string/tab_text_tomorrow"/>
         </LinearLayout>
 
@@ -54,31 +56,42 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="@{vm.isHeader ? View.GONE :View.VISIBLE}">
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="55dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_content"
                     android:gravity="center"
-                    android:textColor="@color/balck"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:paddingTop="40dp"
                     android:paddingBottom="40dp"
-                    tools:text="Seoul"/>
+                    tools:text="Seoul"
+                    android:textSize="11dp"
+                    android:textColor="@color/light_black"
+                    android:text="@{vm.city}"/>
 
             <include
                     layout="@layout/item_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:gravity="center"
+                    app:imageUrl="@{vm.todayImageUrl}"
+                    app:weatherStateName="@{vm.todayWeatherStateName}"
+                    app:tempWithHumidity="@{vm.todayTempWithHumidity}"/>
 
             <include
                     layout="@layout/item_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:gravity="center"
+                    app:imageUrl="@{vm.tomorrowImageUrl}"
+                    app:weatherStateName="@{vm.tomorrowWeatherStateName}"
+                    app:tempWithHumidity="@{vm.tomorrowTempWithHumidity}"/>
 
         </LinearLayout>
 
